--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -19,8 +19,8 @@ jobs:
     - name: who-am-i action
       uses: microsoft/powerplatform-actions/who-am-i@v0
       with:
-        environment-url: '<ENVIRONMENTURL>'
-        user-name: '<USERNAME>'
+        environment-url: 'https://org8656d99b.crm8.dynamics.com/'
+        user-name: 'KasifMd@kasifm.onmicrosoft.com'
         password-secret: ${{ secrets.password }}
 
     - name: export-solution action
