--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -32,18 +32,11 @@ jobs:
         solution-name: ALMLab
         solution-output-file: out/exported/ALMLab.zip
 
-    - name: unpack-solution action
-      uses: microsoft/powerplatform-actions/unpack-solution@v0
+    - name: export-solution action
+      uses: microsoft/powerplatform-actions/export-solution@v0
       with:
-        solution-file: out/exported/ALMLab.zip
-        solution-folder: out/solutions/ALMLab
-        solution-type: 'Unmanaged'
-        overwrite-files: true
-
-    - name: branch-solution, prepare it for a PullRequest
-      uses: microsoft/powerplatform-actions/branch-solution@v0
-      with:
-        solution-folder: out/solutions/ALMLab
-        solution-target-folder: solutions/ALMLab
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        allow-empty-commit: true
+        environment-url: 'https://org8656d99b.crm8.dynamics.com/'
+        user-name: 'KasifMd@kasifm.onmicrosoft.com'
+        password-secret: ${{ secrets.password }}
+        solution-name: CloningApp
+        solution-output-file: out/exported/CloningApp.zip
