--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -32,12 +32,12 @@ jobs:
         solution-name: CloningApp2
         solution-output-file: out/exported/CloningApp2.zip
 
-    - name: export-solution action
-      uses: microsoft/powerplatform-actions/export-solution@v0
-      with:
-        environment-url: 'https://org8656d99b.crm8.dynamics.com/'
-        user-name: 'KasifMd@kasifm.onmicrosoft.com'
-        password-secret: ${{ secrets.password }}
-        solution-name: CloningApp
-        solution-output-file: CloningApp.zip
-        working-directory: 'out'
+#     - name: export-solution action
+#       uses: microsoft/powerplatform-actions/export-solution@v0
+#       with:
+#         environment-url: 'https://org8656d99b.crm8.dynamics.com/'
+#         user-name: 'KasifMd@kasifm.onmicrosoft.com'
+#         password-secret: ${{ secrets.password }}
+#         solution-name: CloningApp
+#         solution-output-file: CloningApp.zip
+#         working-directory: 'out'
