--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -49,13 +49,13 @@ jobs:
         environment-url: 'https://org8656d99b.crm8.dynamics.com/'
         user-name: 'KasifMd@kasifm.onmicrosoft.com'
         password-secret: ${{ secrets.password }}
-        solution-name: ALMLab
-        solution-output-file: out/exported/ALMLab.zip
+        solution-name: CloningApp
+        solution-output-file: out/exported/CloningApp.zip
 
     - name: unpack-solution action
       uses: microsoft/powerplatform-actions/unpack-solution@v0
       with:
-        solution-file: out/exported/ALMLab.zip
-        solution-folder: out/solutions/ALMLab
+        solution-file: out/exported/CloningApp.zip
+        solution-folder: out/solutions/CloningApp
         solution-type: 'Unmanaged'
         overwrite-files: true
