--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -66,13 +66,13 @@ jobs:
         environment-url: 'https://org8656d99b.crm8.dynamics.com/'
         user-name: 'KasifMd@kasifm.onmicrosoft.com'
         password-secret: ${{ secrets.password }}
-        solution-name: CloningApp
-        solution-output-file: out/exported/CloningApp.zip
+        solution-name: AssetCheckout
+        solution-output-file: out/exported/AssetCheckout.zip
 
     - name: unpack-solution action
       uses: microsoft/powerplatform-actions/unpack-solution@v0
       with:
-        solution-file: out/exported/CloningApp.zip
-        solution-folder: out/solutions/CloningApp
-        solution-type: 'Unmanaged'
+        solution-file: out/exported/AssetCheckout.zip
+        solution-folder: out/solutions/AssetCheckout
+        solution-type: 'Managed'
         overwrite-files: true
